--- a/TriangleApplication/MainWindow.xaml
+++ b/TriangleApplication/MainWindow.xaml
@@ -20,6 +20,7 @@
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
         <!--Labels for sides-->
         <Label Content="Side a length:"
                Grid.Row="0"
@@ -39,7 +40,7 @@
                HorizontalAlignment="Right"
                VerticalAlignment="Center"
                FontWeight="Bold"/>
-        
+
         <!--Text boxes for user input-->
         <TextBox x:Name="TxtBoxSideA"
                  Grid.Row="0"
@@ -64,12 +65,14 @@
                  TextChanged="TxtBoxSideC_TextChanged"/>
 
         <!--Results-->
-        <Label x:Name="LblResults"
-               Content="Please enter some numbers!"
-               Grid.Row="3"
-               Grid.ColumnSpan="2"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               FontWeight="Bold"/>
+        <TextBlock x:Name="TxtBlockResults"
+                   Text="Please enter some numbers!"
+                   Grid.Row="3"
+                   Grid.ColumnSpan="2"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontWeight="Bold"
+                   TextWrapping="Wrap"
+                   Margin="5"/>
     </Grid>
 </Window>
