Fixed formatting for the XAML, removed unused namespaces, and added some comments.

--- a/TriangleApplication/MainWindow.xaml
+++ b/TriangleApplication/MainWindow.xaml
@@ -12,45 +12,48 @@
         Background="Transparent"
         AllowsTransparency="True"
         MouseDown="Window_MouseDown">
+    <!--Entire window-->
     <Border CornerRadius="10 10 10 10"
             Background="#CC6F29">
+        <!--Place contents in a stackpanel-->
         <StackPanel>
+            <!--Title, min, and close buttons-->
             <Border CornerRadius="9 9 0 0"
                     Background="#212121">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Triangle Application"
-                       VerticalContentAlignment="Center"
-                       HorizontalContentAlignment="Center"
-                       FontWeight="Bold"
-                       FontSize="32"
-                       Foreground="#ffffff"
-                       Margin="50 5 20 5"/>
+                           VerticalContentAlignment="Center"
+                           HorizontalContentAlignment="Center"
+                           FontWeight="Bold"
+                           FontSize="32"
+                           Foreground="#ffffff"
+                           Margin="50 5 20 5"/>
                     <Button x:Name="BtnMin"
-                        Content="—"
-                        ToolTip="Minimize"
-                        Foreground="White"
-                        Width="30"
-                        Height="30"
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Click="BtnMin_Click"/>
+                            Content="—"
+                            ToolTip="Minimize"
+                            Foreground="White"
+                            Width="30"
+                            Height="30"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Click="BtnMin_Click"/>
                     <Button x:Name="BtnExit"
-                        Content="X"
-                        ToolTip="Close"
-                        Foreground="White"
-                        Width="30"
-                        Height="30"
-                        Background="IndianRed"
-                        BorderThickness="0"
-                        Click="BtnExit_Click"/>
+                            Content="X"
+                            ToolTip="Close"
+                            Foreground="White"
+                            Width="30"
+                            Height="30"
+                            Background="IndianRed"
+                            BorderThickness="0"
+                            Click="BtnExit_Click"/>
                 </StackPanel>
             </Border>
-
+            <!--Triangle input box-->
             <Border CornerRadius="10"
-                Margin="15"
-                Background="#706258"
-                BorderThickness="1"
-                BorderBrush="#212121">
+                    Margin="15"
+                    Background="#706258"
+                    BorderThickness="1"
+                    BorderBrush="#212121">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -65,26 +68,26 @@
 
                     <!--Labels for sides-->
                     <Label Content="Side a length:"
-                   Foreground="#ffffff"
-               Grid.Row="0"
-               Grid.Column="0"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Center"
-                       FontSize="18"/>
+                           Foreground="#ffffff"
+                           Grid.Row="0"
+                           Grid.Column="0"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Center"
+                           FontSize="18"/>
                     <Label Content="Side b length:"
-                   Foreground="#ffffff"
-               Grid.Row="1"
-               Grid.Column="0"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Center"
-                       FontSize="18"/>
+                           Foreground="#ffffff"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Center"
+                           FontSize="18"/>
                     <Label Content="Side c length:"
-                   Foreground="#ffffff"
-               Grid.Row="2"
-               Grid.Column="0"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Center"
-                       FontSize="18"/>
+                           Foreground="#ffffff"
+                           Grid.Row="2"
+                           Grid.Column="0"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Center"
+                           FontSize="18"/>
 
                     <!--Text boxes for user input-->
                     <Border CornerRadius="5"
@@ -105,7 +108,6 @@
                             <DropShadowEffect BlurRadius="20" ShadowDepth="5" Direction="270" Color="#706258"/>
                         </Border.Effect>
                     </Border>
-
                     <Border CornerRadius="5"
                             Grid.Row="1"
                             Grid.Column="1"
@@ -117,19 +119,18 @@
                                  Background="Transparent"
                                  BorderThickness="0"
                                  FontSize="14"
-                             HorizontalContentAlignment="Left"
-                             VerticalContentAlignment="Center"
-                             TextChanged="TxtBoxSide_TextChanged"/>
+                                 HorizontalContentAlignment="Left"
+                                 VerticalContentAlignment="Center"
+                                 TextChanged="TxtBoxSide_TextChanged"/>
                         <Border.Effect>
                             <DropShadowEffect BlurRadius="20" ShadowDepth="5" Direction="270" Color="#706258"/>
                         </Border.Effect>
                     </Border>
-
                     <Border CornerRadius="5"
-                Grid.Row="2"
-                Grid.Column="1"
-                Margin="10"
-                Background="#ffffff">
+                            Grid.Row="2"
+                            Grid.Column="1"
+                            Margin="10"
+                            Background="#ffffff">
                         <TextBox x:Name="TxtBoxSideC"
                                  Padding="2,0"
                                  Margin="5"
@@ -144,26 +145,25 @@
                         </Border.Effect>
                     </Border>
                 </Grid>
-
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="10" ShadowDepth="1" Direction="270" Color="#706258"/>
                 </Border.Effect>
-
             </Border>
-            <!--Results-->
+            
+            <!--Results box-->
             <Border Background="#706258"
-                CornerRadius="10"
-                Margin="15 5 15 15"
-                BorderThickness="1"
-                BorderBrush="#212121">
+                    CornerRadius="10"
+                    Margin="15 5 15 15"
+                    BorderThickness="1"
+                    BorderBrush="#212121">
                 <TextBlock x:Name="TxtBlockResults"
-                       Foreground="#ffffff"
-                       FontSize="18"
-                       Height="120"
-                       HorizontalAlignment="Center"
-                       Text="Please enter some numbers for the sides! If the side values are valid, the side type, angle type, and degrees of the triangle will be shown."
-                       TextWrapping="Wrap"
-                       Margin="5 10 5 10"/>
+                           Foreground="#ffffff"
+                           FontSize="18"
+                           Height="120"
+                           HorizontalAlignment="Center"
+                           Text="Please enter some numbers for the sides! If the side values are valid, the side type, angle type, and degrees of the triangle will be shown."
+                           TextWrapping="Wrap"
+                           Margin="5 10 5 10"/>
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="10" ShadowDepth="1" Direction="270" Color="#706258"/>
                 </Border.Effect>
